<resources>
    <!-- Settings -->
    <string name="app_name">LostAnimalsAndroid</string>
    <string name="base_url">http://10.0.2.2:5000/api/</string>
    <string name="map_api_key">AIzaSyBoOipA49EfuuPq1w6WO4GJZp1gRFZQIuY</string>
    <string name="auth_file_name">auth_data</string>
    <string name="token_name">jwt_token</string>
    <!-- Errors -->
    <string name="request_error">Failed to make a request</string>
    <string name="login_error">Wrong email or password</string>
    <string name="phone_format_error">Wrong number format</string>
    <!-- Text -->
    <string name="login">Login</string>
    <string name="email">Email*</string>
    <string name="password">Password*</string>
    <string name="register_phrase">Don\'t have an account yet?</string>
    <string name="register">Register</string>
    <string name="map">Map</string>
    <string name="all_posts">All Posts</string>
    <string name="favorite_posts">Favorite Posts</string>
    <string name="list_of_shelters">List of Shelters</string>
    <string name="create_account">Create Account</string>
    <string name="pick_image">Pick image</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="repeat_password">Repeat password*</string>
    <string name="loose_time">Loose time: </string>
    <string name="loose_time_filled">Loose time: %1$s</string>
    <string name="location">Location:</string>
    <string name="location_filled">Location: %1$.5f, %2$.5f</string>
    <string name="seen_time">Seen time:</string>
    <string name="seen_time_filled">Seen time: %1$s</string>

</resources>