<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">

        <androidx.cardview.widget.CardView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:background="#fff"
            app:cardCornerRadius="150dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/login"
                android:textSize="38sp"
                android:textColor="@color/textColorPrimary"/>

            <EditText
                android:id="@+id/login_email"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_title"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:textColor="@color/textColorPrimary"
                android:textColorHint="@color/textColorPrimary"
                android:hint="@string/email" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="250dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_email"
                android:layout_centerHorizontal="true"
                android:textColor="@color/textColorPrimary"
                android:textColorHint="@color/textColorPrimary"
                android:hint="@string/password" />


            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_below="@id/login_password"
                android:paddingHorizontal="40dp"
                android:paddingVertical="5dp"
                android:textSize="16sp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="@color/colorAccent"
                android:textColor="@color/textColorPrimary" />

            <TextView
                android:id="@+id/register_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_button"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:textColor="@color/textColorPrimary"
                android:text="@string/register_phrase"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:layout_below="@id/register_text"
                android:paddingHorizontal="27dp"
                android:paddingVertical="5dp"
                android:textSize="16sp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@color/colorAccent"
                android:textColor="@color/textColorPrimary" />
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>