<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/image_button">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:background="@color/colorPrimary"/>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="120dp"
                    android:rotation="45"
                    android:background="@drawable/pick_image" />

                <ImageView
                    android:id="@+id/user_image"
                    android:layout_width="200dp"
                    android:layout_height="120dp"/>

            </RelativeLayout>

        </RelativeLayout>

        <EditText
            android:id="@+id/first_name"
            android:layout_width="250dp"
            android:textSize="22sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:theme="@style/AccentControlTheme"
            android:hint="@string/first_name" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:theme="@style/AccentControlTheme"
            android:hint="@string/last_name" />

        <EditText
            android:id="@+id/email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="22sp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:hint="@string/email"
            android:focusable="false"
            android:editable="false"
            android:theme="@style/AccentControlTheme"/>

        <EditText
            android:id="@+id/phone"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:hint="@string/phone"
            android:theme="@style/AccentControlTheme"
            android:inputType="phone"/>

        <Button
            android:id="@+id/update_button"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:text="update"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:letterSpacing="0.05"
            android:background="@drawable/button_accent_background"
            android:textColor="@color/colorAccent" />

    </LinearLayout>

</RelativeLayout>